25/11/2017:
	- Added missing RED, GREEN and BLUE colormap implementations to Transforms.cc


24/11/2017:
	- Added input validation for SPECTRA, PFL and MINMAX commands to avoid
	  possible access to unmapped memory - thanks to John Heasman at DocuSign.


17/11/2017:
	- Added a check to KakaduImage.cc for zero-sized regions


04/10/2017:
	- Set an upper size limit to ICC profiles accepted for embedding


04/08/2017:
	- Increased JPEG buffer size to handle large markers such as XMP metadata.
	- XMP metadata size now reported in CVT.cc.


14/07/2017:
	- Added Compressor class from which JPEGCompressor is now derived.
	  Abstracting this will enable easier integration of PNG output.
	  Output format now specified in View class.


06/07/2017:
	- Enabled CORS for error responses.


05/07/2017:
	- Added "Access-Control-Allow-Headers" field if CORS has been set to
	  fix CORS Ajax problems with js libraries such as JQuery, Mootools.


02/07/2017:
	- Added OpenMP threading info to startup in Main.cc.


30/06/2017:
	- Added ICC profile embedding support in JPEGCompressor for both JTL
	  and CVT commands using an implementation based on IJG's iccjpeg.
	  TPTImage and KakaduImage now extract the profile into the metadata map.
	  Added also new EMBED_ICC environment variable to allow user to disable
	  embedding. Thanks to Dave Beaudet for initial implementation.
	- Refactored XMP metadata handling within JPEG.


23/06/2017:
	- Added new OBJ metadata request for IIP protocol to return full list
	  of existing image resolutions.


19/06/2017:
	- Modified URI_MAP to parse this prefix first and only if not present,
	  to use the query string. This allows query strings to be appended for
	  caching purposes etc.


14/06/2017:
	- Added URI_MAP environment variable to enable mapping of URL prefixes
	  to specific protocol handlers without requiring web server rewriting.
	- Added missing checkImage() function to JTL and harmonized with CVT.cc.


12/06/2017: