@@ -9,7 +9,7 @@
     Culture of the Czech Republic.
 
 
-    Copyright (C) 2009-2016 IIPImage.
+    Copyright (C) 2009-2017 IIPImage.
     Author: Ruven Pillay
 
     This program is free software; you can redistribute it and/or modify
@@ -115,7 +115,7 @@ class KakaduImage : public IIPImage {
       @param h height of region
       @param d buffer to fill
    */
-  void process( unsigned int r, int l, int x, int y, unsigned int w, unsigned int h, void* d ) throw (file_error);
+  void process( unsigned int r, int l, int x, int y, unsigned int w, unsigned int h, void* d );
 
   /// Convenience function to delete allocated buffers
   /** @param b pointer to buffer
@@ -165,14 +165,14 @@ class KakaduImage : public IIPImage {
   ~KakaduImage() { closeImage(); };
 
   /// Overloaded function for opening a TIFF image
-  void openImage() throw (file_error);
+  void openImage();
 
 
   /// Overloaded function for loading TIFF image information
   /** @param x horizontal sequence angle
       @param y vertical sequence angle
    */
-  void loadImageInfo( int x, int y ) throw (file_error);
+  void loadImageInfo( int x, int y );
 
   /// Overloaded function for closing a JPEG2000 image
   void closeImage();
@@ -187,7 +187,7 @@ class KakaduImage : public IIPImage {
       @param l number of quality layers to decode
       @param t tile number
    */
-  RawTile getTile( int x, int y, unsigned int r, int l, unsigned int t ) throw (file_error);
+  RawTile getTile( int x, int y, unsigned int r, int l, unsigned int t );
 
   /// Overloaded function for returning a region for a given angle and resolution
   /** Return a RawTile object: Overloaded by child class.
@@ -201,7 +201,7 @@ class KakaduImage : public IIPImage {
       @param h height of region
       @param b buffer to fill
    */
-  RawTile getRegion( int ha, int va, unsigned int r, int l, int x, int y, unsigned int w, unsigned int h ) throw (file_error);
+  RawTile getRegion( int ha, int va, unsigned int r, int l, int x, int y, unsigned int w, unsigned int h );
 
 
 };
