@@ -1,3 +1,10 @@
+26/11/2017:
+	- Removed exception specifications from the IIPImage and Compressor class
+	  declarations as well as from their derived classes. Dynamic exception
+	  specifications are deprecated in C++11 onwards. See for rationale and details:
+	  http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2010/n3051.html
+
+
 25/11/2017:
 	- Added missing RED, GREEN and BLUE colormap implementations to Transforms.cc
 
